add Dockerfile and github action

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=task-manager
+spring.application.name=taskmanager
 
 # H2 file-based database (data persists in ./data/taskdb.mv.db)
 spring.datasource.url=jdbc:h2:file:./data/taskdb;DB_CLOSE_DELAY=-1
