--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.application.name=taskmanager
 
-# H2 file-based database (data persists in ./data/taskdb.mv.db)
-spring.datasource.url=jdbc:h2:file:./data/taskdb;DB_CLOSE_DELAY=-1
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
