feat(security): Milestone 8 - JWT authentication and authorization
- Add Spring Security with JWT token-based authentication
- Implement user registration and login endpoints
- Add password encryption using BCrypt
- Create role-based access control (USER, ADMIN)
- Secure GraphQL mutations with @PreAuthorize annotations
- Add JWT utility classes for token generation/validation
- Implement custom authentication filter and UserDetailsService
- Add user context for GraphQL operations
- Replace manual DataLoader config with Spring GraphQL @BatchMapping
- Add test users and security documentation

--- a/pom.xml
+++ b/pom.xml
@@ -70,10 +70,32 @@
 			<artifactId>spring-graphql-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- DataLoader is built into Spring GraphQL, no separate dependency needed -->
 		<dependency>
-			<groupId>com.graphql-java</groupId>
-			<artifactId>java-dataloader</artifactId>
-			<version>3.2.2</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.12.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.12.5</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.12.5</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
