feat(observability): Milestone 9 - comprehensive monitoring and diagnostics
- Add Spring Boot Actuator with health, metrics, and Prometheus endpoints
- Implement custom metrics service for tracking operations and performance
- Add structured logging with correlation IDs for request tracing
- Create HTTP request interceptor for GraphQL request/response logging
- Integrate metrics tracking in controllers (tasks, users, authentication)
- Configure Micrometer for comprehensive application metrics collection
- Add observability documentation and testing script
- Use modern Spring GraphQL @BatchMapping approach (removed manual DataLoader config)
- Enable detailed health information and endpoint exposure

Metrics tracked:
- Counters: task operations, user operations, authentication events
- Timers: GraphQL queries/mutations, authentication duration
- Gauges: active tasks and users count

Endpoints available:
- /actuator/health - Application health status
- /actuator/metrics - JVM and custom metrics
- /actuator/prometheus - Prometheus-compatible metrics export
- /actuator/info - Application information

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,21 @@ spring.h2.console.path=/h2-console
 # JWT Configuration
 jwt.secret=myVerySecretKeyThatShouldBeAtLeast256BitsLong1234567890
 jwt.expiration=86400000
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,httptrace,loggers
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+# Logging Configuration
+logging.level.com.projects.taskmanager=DEBUG
+logging.level.org.springframework.graphql=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level [%X{traceId:-},%X{spanId:-}] %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level [%X{traceId:-},%X{spanId:-}] %logger{36} - %msg%n
+
+# GraphQL Configuration  
+spring.graphql.cors.allowed-origins=*
+spring.graphql.cors.allowed-methods=GET,POST
+spring.graphql.cors.allowed-headers=*
