feat(client): Add comprehensive CLI client for API testing
- Create interactive Python CLI client for testing all API endpoints
- Implement authentication flow (register/login) with JWT token management
- Add complete GraphQL operations (tasks CRUD, user queries)
- Include automated test scenarios and quick test script
- Add health and metrics endpoint testing for observability
- Create virtual environment setup with dependency management
- Add comprehensive documentation and usage instructions
- Include convenience runner script for easy setup and execution

Features:
- Interactive menu system for manual testing
- Automated test scenarios for CI/CD integration
- JWT authentication and role-based testing
- GraphQL query and mutation testing
- Observability endpoint testing
- Error handling and validation testing
- Correlation ID and metrics verification

Usage:
- ./run_client.sh - automated setup and run
- python client/quick_test.py - automated API testing
- python client/task_manager_client.py - interactive testing

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@
 # H2 database files (if any)
 *.mv.db
 *.h2.db
+
+# Python virtual environment and cache
+client/venv/
+client/__pycache__/
+client/*.pyc
+*.pyo
+*.pyd
+.Python
