feat(cicd): add docker-compose, update dockerfile, add psql dependency

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,15 +1,43 @@
-# Example prod-like settings (externalize secrets in real prod)
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# Production configuration for PostgreSQL
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://postgres:5432/taskmanager}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:taskmanager}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:taskmanager123}
 
-spring.jpa.hibernate.ddl-auto=validate
+# JPA/Hibernate configuration
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_DDL_AUTO:update}
 spring.jpa.show-sql=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+# Disable H2 console in production
 spring.h2.console.enabled=false
 
-# App-specific
-task.title.max-length=120
-task.description.max-length=1000
+# JWT configuration
+jwt.secret=${JWT_SECRET:your-super-secret-jwt-key-change-this-in-production}
+jwt.expiration=${JWT_EXPIRATION:86400000}
+
+# Server configuration
+server.port=${SERVER_PORT:8080}
+server.servlet.context-path=${SERVER_CONTEXT_PATH:}
+
+# Actuator configuration
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=when-authorized
+management.health.db.enabled=true
+
+# Logging configuration
+logging.level.com.projects.taskmanager=INFO
+logging.level.org.springframework.security=WARN
+logging.level.org.hibernate.SQL=WARN
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# App-specific configuration
+task.title.max-length=${TASK_TITLE_MAX_LENGTH:120}
+task.description.max-length=${TASK_DESCRIPTION_MAX_LENGTH:1000}
+
+# File upload configuration
+spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:10MB}
+spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:10MB}
 
