--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -41,3 +41,10 @@ task.description.max-length=${TASK_DESCRIPTION_MAX_LENGTH:1000}
 spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:10MB}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:10MB}
 
+# GraphQL Configuration
+spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.path=/graphiql
+spring.graphql.cors.allowed-origins=*
+spring.graphql.cors.allowed-methods=GET,POST
+spring.graphql.cors.allowed-headers=*
+
